--- a/ch3/kubernetes/sample-app-deployment.yml
+++ b/ch3/kubernetes/sample-app-deployment.yml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:                 
         - name: sample-app        
-          image: sample-app:v2    
+          image: 337179847826.dkr.ecr.us-east-2.amazonaws.com/sample-app:v3   
           ports:
             - containerPort: 8080 
           env:                    
