--- a/ch5/sample-app/package.json
+++ b/ch5/sample-app/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dockerize": "./build-docker-image.sh",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
     "test": "jest --verbose",
     "test:performance": "jest app.performance.test.js",
     "test:security": "jest app.security.test.js",
@@ -18,9 +20,12 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
     "eslint": "^9.25.1",
     "eslint-plugin-node": "^11.1.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "supertest": "^7.1.0"
   }
 }
